--- a/cyclope/core/collections/templates/collections/category_teaser_list.html
+++ b/cyclope/core/collections/templates/collections/category_teaser_list.html
@@ -8,6 +8,22 @@
   <big class="category_title">{{ category.name }}</big>
   {% endif %}
 
+  <div id="categories_navigation">
+    {% if category.parent %}
+      <a href="{% url category-teaser_list category.parent.slug %}" class="parent">{{ category.parent.name }}</a>
+    {% else %}
+      <a href="{% url collection-root_categories_teaser_list category.collection.slug %}" class="parent">{{ category.collection.name }}</a>
+    {% endif %}
+
+    {% if category.children.all %}
+      <ul>
+        {% for child in category.children.all %}
+          <li> <a href="{% url category-teaser_list child.slug %}" class="children">{{ child.name }}</a> </li>
+        {% endfor %}
+      </ul>
+    {% endif %}
+  </div>
+
   {% comment %}
   We show a teaser view of every object belonging to this category.
   {% endcomment %}
