Added related content lists in the detailed views

--- a/cyclope/apps/articles/templates/articles/article_detail.html
+++ b/cyclope/apps/articles/templates/articles/article_detail.html
@@ -117,24 +117,10 @@ TODO(nicoechaniz): finish adaptation from smarty to django. add trans to text th
   </span>
 
 
-	<!-- relacionadas -->
-<!--
-TODO(nicoechaniz): uncomment and fix if related articles are implemented
-           {if $articulo.relacionadas eq 'si'}
-          <div id="related">
-            <h6>Más información:</h6>
-            <ul>
-            {section name=bucle loop=$relacionadas}
-              <li> <a href="{$relacionadas[bucle].link}">{$relacionadas[bucle].titulo}</a></li>
-              {/section}
-            </ul>
-          </div>
-          {/if}
--->
-              <!-- /relacionadas -->
+  {% include 'cyclope/related_contents_block.html' %}
 
 
-	      <div class="clear"></div>
+          <div class="clear"></div>
      <!-- redsocial -->
            <div id="socialnetworks"><small>{% trans "Share in your social networks"%}:</small>
 <a href="http://www.facebook.com" rel="nofollow" onclick="sbs_facebook(); return false;"><img src="{{ CYCLOPE_THEME_MEDIA_URL }}images/redsocial/facebook.png" border="0" alt="Compartir en Facebook" title="Compartir en Facebook" height="24" width="24" /></a>
