--- a/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/externalcontent_detail.html
@@ -24,6 +24,9 @@
   </span>
   <span class="text">{{ media.description|safe }}</span>
 
+  {% include 'cyclope/related_contents_block.html' %}
+
+
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
 
