--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
@@ -17,6 +17,8 @@
 
   <span class="text">{{ media.description|safe }}</span>
 
+  {% include 'cyclope/related_contents_block.html' %}
+
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
 
