--- a/cyclope/apps/articles/templates/articles/article_labeled_icon.html
+++ b/cyclope/apps/articles/templates/articles/article_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="article labeled_icon">
+  <div class="content-view article labeled_icon">
     <a href="{% url article-detail article.slug %}">
       {% if article.pictures %}
         <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/article.png" width="48px" border="0"/>
