--- a/cyclope/apps/articles/templates/articles/article_teaser.html
+++ b/cyclope/apps/articles/templates/articles/article_teaser.html
@@ -1,6 +1,6 @@
 {% load i18n tagging_tags fb_versions %}
 
-  <div class="article teaser">
+  <div class="content-view article teaser article-teaser">
     <div class="pretitle-container first">
     {% if  article.pretitle and not simplified_view %}
     <span class="pretitle">{{ article.pretitle }} | </span>
