--- a/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_detail.html
@@ -6,7 +6,7 @@
 
 {% alias media as 'current_object' %}
 
-<div class="document media detail">
+<div class="content-view document media detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
