--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="media labeled_icon flashmovie">
+  <div class="content-view media labeled_icon flashmovie">
     <a href="{% url flashmovie-detail flashmovie.slug %}">
       {% if flashmovie.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/flash.png"/>
