--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="media labeled_icon movieclip">
+  <div class="content-view media labeled_icon movieclip">
     <a href="{% url movieclip-detail movieclip.slug %}">
       {% if movieclip.still %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/video.png"/>
