--- a/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/picture_detail.html
@@ -6,7 +6,7 @@
 
 {% alias media as 'current_object' %}
 
-<div class="picture media detail">
+<div class="content-view picture media detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
