--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
@@ -6,7 +6,7 @@
 
 {% alias media as 'current_object' %}
 
-<div class="regularfile media detail">
+<div class="content-view regularfile media detail">
 
   {% include 'medialibrary/media_detail_header.html' %}
 
