--- a/cyclope/apps/medialibrary/templates/medialibrary/document_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/document_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="media labeled_icon document">
+  <div class="content-view media labeled_icon document">
     <a href="{% url document-detail document.slug %}">
       {% if document.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/document.png"/>
