--- a/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_labeled_icon.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/soundtrack_labeled_icon.html
@@ -1,6 +1,6 @@
 {% load fb_versions cyclope_utils %}
 
-  <div class="media labeled_icon soundtrack">
+  <div class="content-view media labeled_icon soundtrack">
     <a href="{% url soundtrack-detail soundtrack.slug %}">
       {% if soundtrack.image %}
       <img class="type_icon" src="{{ CYCLOPE_THEME_MEDIA_URL }}images/icons/audio.png"/>
