--- a/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/movieclip_detail.html
@@ -14,9 +14,13 @@
   {% assign player_height '320' %}
   {% include 'medialibrary/media_player.html' %}
 
-  <div><span class="text">{{ media.description|safe }}</span></div>
+  <div><span class="html-text">{{ media.description|safe }}</span></div>
+
+  {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
+
+  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
