--- a/cyclope/templates/cyclope/themes/neutronica/base.html
+++ b/cyclope/templates/cyclope/themes/neutronica/base.html
@@ -123,18 +123,18 @@ Si modificas no borres estas lineas :)
 
       <div id="footer_separator"></div>
 
-      <div id="footer">
+      <div id="footer_container">
         {% region 'footer' %}
-        Los contenidos de este sitio web están bajo una
+        <span id="creativecommons">Los contenidos de este sitio web están bajo una
         <a href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.es_CO">
           Licencia Creative Commons Reconocimiento-NoComercial-SinObraDerivada 3.0
-        </a>.<br/>
-        Este sitio ha sido diseñado por
-        <a href="http://www.codigosur.org">Código Sur</a>
-        y es administrado con el editor dinámico de contenidos
+        </a></span>.<br/>
+        <span id="codigo sur">Este sitio ha sido diseñado por
+        <a href="http://www.codigosur.org">Código Sur</a></span>, 
+        <span id="cyclope">administrado con el editor dinámico de contenidos
         <a href="http://cyclope.codigosur.org">Cyclope GPL</a>
-        que ha sido desarrollado por
-        <a href="http://www.codigosur.org">Código Sur</a>.<br/>
+        desarrollado por
+        <a href="http://www.codigosur.org">Código Sur</a></span>.<br/>
         Este sitio ha sido desarrollado sobre estándares de diseño web,
         cualquier navegador de calidad lo visualizará correctamente: <br/>
 
