--- a/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/flashmovie_detail.html
@@ -21,11 +21,15 @@
     </object>
   </div>
 
-  <span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span>
+  <div><span class="download_link"><a target="_blank" href="{{ media.flash }}">{% trans "full screen view (new window)"%}</a></span></div>
 
-  <span class="text">{{ media.description|safe }}</span>
+  <div><span class="html-text">{{ media.description|safe }}</span></div>
+
+  {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
+
+  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
