--- a/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
+++ b/cyclope/apps/medialibrary/templates/medialibrary/regularfile_detail.html
@@ -13,11 +13,15 @@
   {% if media.image %}
     <img src="{% version media.image.path 'big' %}"/>
   {% endif %}
-  <span class="download_link"><a href="{{ media.document }}">{% trans "download file" %}</a></span>
+  <div><span class="download_link"><a href="{{ media.document }}">{% trans "download file" %}</a></span></div>
 
-  <span class="text">{{ media.description|safe }}</span>
+  <div><span class="html-text">{{ media.description|safe }}</span></div>
+
+  {% include 'medialibrary/media_detail_footer.html' %}
 
   {% include 'cyclope/related_contents_block.html' %}
+
+  <hr>
 
   <!--COMENTARIOS -->
   {% include 'comments/comments_block.html' %}
