--- a/cyclope/media/themes/neutronica/css/layout.css
+++ b/cyclope/media/themes/neutronica/css/layout.css
@@ -6,7 +6,7 @@
 #user_status,
 #branding,
 #header,
-#footer {
+#footer_container {
  margin-left:auto;margin-right:auto;width:960px;
 }
 
@@ -78,6 +78,6 @@ margin-left:0;
 }
 #header {
 }
-#footer {
+#footer_container {
 }
 
